add CL entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
 name = hrkneeseg
 author = Nathan J. Neeteson
-author-email = njneetes@ucalgary.ca
+author_email = njneeteson@gmail.com
 summary = CL utilities for deep learning segmentation of HR-pQCT knee images
-description-file = README.md
-description-content-type = text/x-rst; charset=UTF-8
-home-page = https://github.com/Bonelab/HRpQCT-Knee-Seg
+description_file = README.md
+description_content_type = text/x-rst; charset=UTF-8
+home_page = https://github.com/Bonelab/HRpQCT-Knee-Seg
 project_urls =
     Source Code = https://github.com/Bonelab/HRpQCT-Knee-Seg
 license = GPL-v3
 classifier =
-    Development Status :: 1 - Planning
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Healthcare Industry
     Intended Audience :: Science/Research
@@ -20,6 +20,31 @@ keywords =
     imaging
 
 [entry_points]
+console_scripts =
+    hrkAIMs2NIIs = hrkneeseg.aim_nifti.convert_aims_to_nifti:main
+    hrkMask2AIM = hrkneeseg.aim_nifti.convert_mask_to_aim:main
+    hrkMasks2AIMs = hrkneeseg.aim_nifti.convert_masks_to_aims:main
+    hrkParseLogs = hrkneeseg.analysis.parse_logs:main
+    hrkCombineROIMasks = hrkneeseg.atlas.combine_roi_masks:main
+    hrkGenerateAffineAtlas = hrkneeseg.atlas.generate_affine_atlas:main
+    hrkInferenceEnsemble = hrkneeseg.inference.inference_ensemble:main
+    hrkIntersectMasks = hrkneeseg.postprocessing.intersect_masks:main
+    hrkPostProcessSegmentation = hrkneeseg.postprocessing.postprocess_segmentation:main
+    hrkMaskImage = hrkneeseg.preprocessing.mask_image:main
+    hrkPreProcess2DSlices = hrkneeseg.preprocessing.preprocess_2d_slice_samples:main
+    hrkPreProcess2dot5DSliceStacks = hrkneeseg.preprocessing.preprocess_2dot5d_slice_stack_samples:main
+    hrkPreProcess3DPatches = hrkneeseg.preprocessing.preprocess_3d_patch_samples:main
+    hrkPreProcess3DPatchesFromNPZ = hrkneeseg.preprocessing.preprocess_3d_patch_samples_from_npz:main
+    hrkTrainSeGAN_CV = hrkneeseg.training.cv.train_segan_cv:main
+    hrkTrainSegResNetVAE_CV = hrkneeseg.training.cv.train_segresnetvae_cv:main
+    hrkTrainUNet_CV = hrkneeseg.training.cv.train_unet_cv:main
+    hrkTrainSeGAN_Final = hrkneeseg.training.final.train_segan_final:main
+    hrkTrainSegResNetVAE_Final = hrkneeseg.training.final.train_segresnetvae_final:main
+    hrkTrainUNet_Final = hrkneeseg.training.final.train_unet_final:main
+    hrkTrainSeGAN_TransferCV = hrkneeseg.training.knee_cv.train_segan_knee_cv:main
+    hrkTrainSegResNetVAE_TransferCV = hrkneeseg.training.knee_cv.train_segresnetvae_knee_cv:main
+    hrkTrainUNet_TransferCV = hrkneeseg.training.knee_cv.train_unet_knee_cv:main
+    hrkVisualize2DPanning = hrkneeseg.visualization.write_panning_video.py:main
 
 [pbr]
 skip_changelog = 1
