added cli setup tests and checked they pass

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ console_scripts =
     hrkTrainSeGAN_TransferCV = hrkneeseg.training.knee_cv.train_segan_knee_cv:main
     hrkTrainSegResNetVAE_TransferCV = hrkneeseg.training.knee_cv.train_segresnetvae_knee_cv:main
     hrkTrainUNet_TransferCV = hrkneeseg.training.knee_cv.train_unet_knee_cv:main
-    hrkVisualize2DPanning = hrkneeseg.visualization.write_panning_video.py:main
+    hrkVisualize2DPanning = hrkneeseg.visualization.write_panning_video:main
 
 [pbr]
 skip_changelog = 1
