document the cross-sectional workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ console_scripts =
     hrkParseLogs = hrkneeseg.analysis.parse_logs:main
     hrkCombineROIMasks = hrkneeseg.atlas.combine_roi_masks:main
     hrkGenerateAffineAtlas = hrkneeseg.atlas.generate_affine_atlas:main
+    hrkGenerateROIs = hrkneeseg.generate_rois.generate_rois:main
     hrkInferenceEnsemble = hrkneeseg.inference.inference_ensemble:main
     hrkIntersectMasks = hrkneeseg.postprocessing.intersect_masks:main
     hrkPostProcessSegmentation = hrkneeseg.postprocessing.postprocess_segmentation:main
