add a function to write slurm scripts automatically

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ console_scripts =
     hrkTrainSegResNetVAE_TransferCV = hrkneeseg.training.knee_cv.train_segresnetvae_knee_cv:main
     hrkTrainUNet_TransferCV = hrkneeseg.training.knee_cv.train_unet_knee_cv:main
     hrkVisualize2DPanning = hrkneeseg.visualization.write_panning_video:main
-    hrkCrosssectional = hrkneeseg.automation.crosssectional:main
+    hrkCrossSectional = hrkneeseg.automation.crosssectional:main
     hrkLongitudinal = hrkneeseg.automation.longitudinal:main
 
 [pbr]
